@@ -75,6 +75,14 @@ public class Pii {
 
     /**
      * This field was generated by MyBatis Generator.
+     * This field corresponds to the database column PII.性別
+     *
+     * @mbggenerated
+     */
+    private String 性別;
+
+    /**
+     * This field was generated by MyBatis Generator.
      * This field corresponds to the database column PII.聯絡電話
      *
      * @mbggenerated
@@ -83,11 +91,11 @@ public class Pii {
 
     /**
      * This field was generated by MyBatis Generator.
-     * This field corresponds to the database column PII.性別
+     * This field corresponds to the database column PII.地址
      *
      * @mbggenerated
      */
-    private String 性別;
+    private String 地址;
 
     /**
      * This field was generated by MyBatis Generator.
@@ -323,6 +331,30 @@ public class Pii {
 
     /**
      * This method was generated by MyBatis Generator.
+     * This method returns the value of the database column PII.性別
+     *
+     * @return the value of PII.性別
+     *
+     * @mbggenerated
+     */
+    public String get性別() {
+        return 性別;
+    }
+
+    /**
+     * This method was generated by MyBatis Generator.
+     * This method sets the value of the database column PII.性別
+     *
+     * @param 性別 the value for PII.性別
+     *
+     * @mbggenerated
+     */
+    public void set性別(String 性別) {
+        this.性別 = 性別 == null ? null : 性別.trim();
+    }
+
+    /**
+     * This method was generated by MyBatis Generator.
      * This method returns the value of the database column PII.聯絡電話
      *
      * @return the value of PII.聯絡電話
@@ -347,26 +379,26 @@ public class Pii {
 
     /**
      * This method was generated by MyBatis Generator.
-     * This method returns the value of the database column PII.性別
+     * This method returns the value of the database column PII.地址
      *
-     * @return the value of PII.性別
+     * @return the value of PII.地址
      *
      * @mbggenerated
      */
-    public String get性別() {
-        return 性別;
+    public String get地址() {
+        return 地址;
     }
 
     /**
      * This method was generated by MyBatis Generator.
-     * This method sets the value of the database column PII.性別
+     * This method sets the value of the database column PII.地址
      *
-     * @param 性別 the value for PII.性別
+     * @param 地址 the value for PII.地址
      *
      * @mbggenerated
      */
-    public void set性別(String 性別) {
-        this.性別 = 性別 == null ? null : 性別.trim();
+    public void set地址(String 地址) {
+        this.地址 = 地址 == null ? null : 地址.trim();
     }
 
     /**
