@@ -15,8 +15,9 @@
     <result column="出生月" jdbcType="VARCHAR" property="出生月" />
     <result column="出生日" jdbcType="VARCHAR" property="出生日" />
     <result column="出生年" jdbcType="VARCHAR" property="出生年" />
-    <result column="聯絡電話" jdbcType="VARCHAR" property="聯絡電話" />
     <result column="性別" jdbcType="VARCHAR" property="性別" />
+    <result column="聯絡電話" jdbcType="VARCHAR" property="聯絡電話" />
+    <result column="地址" jdbcType="VARCHAR" property="地址" />
     <result column="收案醫師" jdbcType="VARCHAR" property="收案醫師" />
     <result column="收案醫院名稱" jdbcType="VARCHAR" property="收案醫院名稱" />
   </resultMap>
@@ -91,7 +92,7 @@
       WARNING - @mbggenerated
       This element is automatically generated by MyBatis Generator, do not modify.
     -->
-    編碼日期, GUID, MRN, 身份證字號, 姓氏, 名字, 出生月, 出生日, 出生年, 聯絡電話, 性別, 收案醫師, 收案醫院名稱
+    編碼日期, GUID, MRN, 身份證字號, 姓氏, 名字, 出生月, 出生日, 出生年, 性別, 聯絡電話, 地址, 收案醫師, 收案醫院名稱
   </sql>
   <select id="selectByExample" parameterType="exceldb.model.PiiExample" resultMap="BaseResultMap">
     <!--
@@ -128,12 +129,12 @@
     -->
     insert into PII (編碼日期, GUID, MRN, 
       身份證字號, 姓氏, 名字, 出生月, 
-      出生日, 出生年, 聯絡電話, 性別, 
-      收案醫師, 收案醫院名稱)
+      出生日, 出生年, 性別, 聯絡電話, 
+      地址, 收案醫師, 收案醫院名稱)
     values (#{編碼日期,jdbcType=VARCHAR}, #{guid,jdbcType=VARCHAR}, #{mrn,jdbcType=VARCHAR}, 
       #{身份證字號,jdbcType=VARCHAR}, #{姓氏,jdbcType=VARCHAR}, #{名字,jdbcType=VARCHAR}, #{出生月,jdbcType=VARCHAR}, 
-      #{出生日,jdbcType=VARCHAR}, #{出生年,jdbcType=VARCHAR}, #{聯絡電話,jdbcType=VARCHAR}, #{性別,jdbcType=VARCHAR}, 
-      #{收案醫師,jdbcType=VARCHAR}, #{收案醫院名稱,jdbcType=VARCHAR})
+      #{出生日,jdbcType=VARCHAR}, #{出生年,jdbcType=VARCHAR}, #{性別,jdbcType=VARCHAR}, #{聯絡電話,jdbcType=VARCHAR}, 
+      #{地址,jdbcType=VARCHAR}, #{收案醫師,jdbcType=VARCHAR}, #{收案醫院名稱,jdbcType=VARCHAR})
   </insert>
   <insert id="insertSelective" parameterType="exceldb.model.Pii">
     <!--
@@ -169,11 +170,14 @@
       <if test="出生年 != null">
         出生年,
       </if>
+      <if test="性別 != null">
+        性別,
+      </if>
       <if test="聯絡電話 != null">
         聯絡電話,
       </if>
-      <if test="性別 != null">
-        性別,
+      <if test="地址 != null">
+        地址,
       </if>
       <if test="收案醫師 != null">
         收案醫師,
@@ -210,11 +214,14 @@
       <if test="出生年 != null">
         #{出生年,jdbcType=VARCHAR},
       </if>
+      <if test="性別 != null">
+        #{性別,jdbcType=VARCHAR},
+      </if>
       <if test="聯絡電話 != null">
         #{聯絡電話,jdbcType=VARCHAR},
       </if>
-      <if test="性別 != null">
-        #{性別,jdbcType=VARCHAR},
+      <if test="地址 != null">
+        #{地址,jdbcType=VARCHAR},
       </if>
       <if test="收案醫師 != null">
         #{收案醫師,jdbcType=VARCHAR},
@@ -268,11 +275,14 @@
       <if test="record.出生年 != null">
         出生年 = #{record.出生年,jdbcType=VARCHAR},
       </if>
+      <if test="record.性別 != null">
+        性別 = #{record.性別,jdbcType=VARCHAR},
+      </if>
       <if test="record.聯絡電話 != null">
         聯絡電話 = #{record.聯絡電話,jdbcType=VARCHAR},
       </if>
-      <if test="record.性別 != null">
-        性別 = #{record.性別,jdbcType=VARCHAR},
+      <if test="record.地址 != null">
+        地址 = #{record.地址,jdbcType=VARCHAR},
       </if>
       <if test="record.收案醫師 != null">
         收案醫師 = #{record.收案醫師,jdbcType=VARCHAR},
@@ -300,8 +310,9 @@
       出生月 = #{record.出生月,jdbcType=VARCHAR},
       出生日 = #{record.出生日,jdbcType=VARCHAR},
       出生年 = #{record.出生年,jdbcType=VARCHAR},
-      聯絡電話 = #{record.聯絡電話,jdbcType=VARCHAR},
       性別 = #{record.性別,jdbcType=VARCHAR},
+      聯絡電話 = #{record.聯絡電話,jdbcType=VARCHAR},
+      地址 = #{record.地址,jdbcType=VARCHAR},
       收案醫師 = #{record.收案醫師,jdbcType=VARCHAR},
       收案醫院名稱 = #{record.收案醫院名稱,jdbcType=VARCHAR}
     <if test="_parameter != null">
