@@ -88,3 +88,7 @@ Version 1.5.0
 + Columns are editable
 
 + Filter valid columns while importing excels
+
++ Filter out encrypted ZIPs with unmatched passwords
+
++ Added 地址 to PII
